Bug 148594 - IVS characters get more space if character spacing is set.
Summary: IVS characters get more space if character spacing is set.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.1.3 release
Hardware: All All
: medium normal
Assignee: Mark Hung
URL: https://github.com/ButTaiwan/bpmfvs/i...
Whiteboard: target:7.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2022-04-14 13:21 UTC by Mark Hung
Modified: 2022-06-27 04:07 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample document (14.99 KB, application/vnd.oasis.opendocument.text)
2022-04-14 13:22 UTC, Mark Hung
Details
Illustration for the problem. (65.63 KB, image/jpeg)
2022-04-14 13:23 UTC, Mark Hung
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Hung 2022-04-14 13:21:33 UTC
Description:
When setting character spacing to 10pt, some unicode IVS ( U+4E00U+e01e1 ) get more space than it should have.

Original issue is reported:
https://github.com/ButTaiwan/bpmfvs/issues/1

The font can be downloaded here:
https://github.com/ButTaiwan/bpmfvs/releases/download/v1.320/Bpmf_Regulars.zip


Steps to Reproduce:
1.Open the document.
2.Check line 6, and 7. 


Actual Results:
Some space between chracters are bigger.

Expected Results:
The width of character space should be consistent.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.1.3 (x64) / LibreOffice Community
Build ID: a69ca51ded25f3eefd52d7bf9a5fad8c90b87951
CPU threads: 16; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: zh-TW (zh_TW); UI: zh-TW
Calc: CL
Comment 1 Mark Hung 2022-04-14 13:22:13 UTC
Created attachment 179557 [details]
Sample document
Comment 2 Mark Hung 2022-04-14 13:23:17 UTC
Created attachment 179558 [details]
Illustration for the problem.
Comment 3 Commit Notification 2022-04-19 11:52:16 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7418fc88021a7d2cb45eb3b029466ed7a14d3338

tdf#148594 correcting the number of kern spaces.

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Aron Budea 2022-06-04 22:24:37 UTC
Mark, is this fix done, or does it need further work?